tests/baselines/reference/multipleNumericIndexers.errors.txt
==== tests/cases/compiler/multipleNumericIndexers.ts (6 errors) ====
    // Multiple indexers of the same type are an error
    
    class C {
        [x: number]: string;
        [x: number]: string;
        ~~~~~~~~~~~~~~~~~~~
!!! error TS2233: Duplicate number index signature.
    }
    
    interface I {
        [x: number]: string;
        [x: number]: string;
        ~~~~~~~~~~~~~~~~~~~
!!! error TS2233: Duplicate number index signature.
    }
    
    var a: {
        [x: number]: string;
        [x: number]: string;
        ~~~~~~~~~~~~~~~~~~~
!!! error TS2233: Duplicate number index signature.
    }
    
    var b: {
        [x: number]: string;
        [x: number]: string
        ~~~~~~~~~~~~~~~~~~~
!!! error TS2233: Duplicate number index signature.
    } = { 1: '', "2": '' }
    
    class C2<T> {
        [x: number]: string;
        [x: number]: string;
        ~~~~~~~~~~~~~~~~~~~
!!! error TS2233: Duplicate number index signature.
    }
    
    interface I<T> {
              ~
!!! error TS2234: All declarations of an interface must have identical type parameters.
        [x: number]: string;
        [x: number]: string;
    }
    